delete useless codes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ html{
 <title>우연뮤비</title>
 <body>
 
-<a id="start" href="coMov.html">
+<a id="start" href="https://workinprogress.kr/coMov/coMov.html">
 <img src="album.jpg">
 </a>
 </body>
