--- a/coMov.html
+++ b/coMov.html
@@ -6,25 +6,16 @@
 		<link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 		<link href="css/style.css" rel="stylesheet" type="text/css">
 		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-  <script src="/socket.io/socket.io.js"></script>
-  <!-- <script>
-    $(document).ready(function() {
-      var socket = io.connect('http://localhost');
-      $('#button').click(function(e){
-        socket.emit('click');
-        e.preventDefault();
-      });
-    });
-  </script> -->
+
 	</head>
 	<body>
 		<div id="container"></div>
 		<div id="prompt"></div>
 
 		<audio autoplay="autoplay">
-		     <source src="/audio/CUCO.mp3" />
+		     <source src="audio/CUCO.mp3" />
 		 </audio>
+
 		<script src="js/libs/three.min.js"></script>
 		<script src="js/libs/dat.gui.min.js"></script>
 		<script src="js/libs/ImprovedNoise.js"></script>
@@ -33,10 +24,7 @@
   	<script src="js/libs/DeviceOrientationControls.js"></script>
   	<script src="js/libs/OrbitControls.js"></script>
 
-		<script src="js/bundle.js"></script>
 		<script src="js/main.js"></script>
-
-
 
 
 	</body>
